--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "handlebars-helpers": "^0.10.0",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
+    "jquery": "^3.6.1",
     "mongoose": "^6.6.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
