--- a/config.env
+++ b/config.env
@@ -1,1 +1,2 @@
 PORT=3000
+MONGO_URI=mongodb+srv://matedevang532003:DJMATE2003@cluster0.wld7ojm.mongodb.net/BuildAims-FitnessZone?retryWrites=true&w=majority
